tests/app/app.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: my-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          imagePullPolicy: Never
          image: jmalloc/echo-server:latest
          ports:
            - name: http-port
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: my-app
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
